<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/houseIndicatorsLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/bedroomIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bed"
        app:tint="@color/medium"
        android:contentDescription="@string/content_description_bedroom" />

    <TextView
        android:id="@+id/houseBedrooms"
        style="@style/textBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/bedroom_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bedroomIcon"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/bathroomIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/houseBedrooms"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bath"
        app:tint="@color/medium"
        android:contentDescription="@string/content_description_bathroom" />

    <TextView
        android:id="@+id/houseBathrooms"
        style="@style/textBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/bathroom_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bathroomIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/sizeIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/houseBathrooms"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_layers"
        app:tint="@color/medium"
        android:contentDescription="@string/content_description_size" />

    <TextView
        android:id="@+id/houseSize"
        style="@style/textBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/size_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sizeIcon"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="12dp"
        app:layout_constraintStart_toEndOf="@+id/houseSize"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_location"
        app:tint="@color/medium"
        android:contentDescription="@string/content_description_location" />


    <TextView
        android:id="@+id/houseLocation"
        style="@style/textBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/location_placeholder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/locationIcon"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>