<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.RealEstateApp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/red_dtt"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/houseDetailsImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/strong"
                android:contentDescription="@string/content_description_house"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                app:srcCompat="@drawable/house_image" />

            <androidx.appcompat.widget.Toolbar
                style="@style/textTitle01"
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin">

                <ImageView
                    android:id="@+id/backButton"
                    android:layout_width="30sp"
                    android:layout_height="30sp"
                    android:contentDescription="@string/content_description_arrow"
                    app:srcCompat="@drawable/ic_back"
                    app:tint="@color/white" />

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24sp">

            <TextView
                android:id="@+id/houseDetailsPrice"
                style="@style/textTitle01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_placeholder"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <include
                layout="@layout/house_indicators"
                android:id="@+id/houseIndicators"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/houseDetailsPrice"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionLabel"
                style="@style/textTitle01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/description_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/houseDetailsPrice" />

            <TextView
                android:id="@+id/houseDetailsDescription"
                style="@style/textBody"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24sp"
                android:text="@string/about_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descriptionLabel" />

            <TextView
                android:id="@+id/locationLabel"
                style="@style/textTitle01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32sp"
                android:text="@string/location_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/houseDetailsDescription" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/houseMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="0dp"
                android:layout_height="250sp"
                android:layout_marginTop="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationLabel" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>